@@ -4,110 +4,131 @@ import org.bukkit.Bukkit;
 import org.bukkit.ChatColor;
 import org.bukkit.Location;
 import org.bukkit.Material;
-import org.bukkit.Sound;
-import org.bukkit.block.Container;
 import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
-import org.bukkit.event.block.Action;
+import org.bukkit.event.inventory.ClickType;
 import org.bukkit.event.inventory.InventoryClickEvent;
-import org.bukkit.event.inventory.InventoryType;
-import org.bukkit.event.player.PlayerInteractEvent;
-import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.ItemStack;
-import org.bukkit.inventory.meta.ItemMeta;
+import org.bukkit.scheduler.BukkitRunnable;
 
-import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.HashMap;
+import java.util.Map;
+import java.util.UUID;
 
 public class LagerListener implements Listener {
 
     private final BierLager plugin;
+    private final Map<UUID, Integer> playerPage = new HashMap<>(); // Speichert die aktuelle Seite
 
     public LagerListener(BierLager plugin) {
         this.plugin = plugin;
     }
 
     @EventHandler
-    public void onInteract(PlayerInteractEvent e) {
-        if (e.getAction() != Action.RIGHT_CLICK_BLOCK) return;
-        if (e.getClickedBlock() == null) return;
-        if (!(e.getClickedBlock().getState() instanceof Container)) return;
-
-        Player p = e.getPlayer();
-        ItemStack item = e.getItem();
-
-        if (ItemManager.isLagerTool(item, plugin)) {
+    public void onDrag(org.bukkit.event.inventory.InventoryDragEvent e) {
+        if (e.getView().getTitle().contains("Filter:")) {
             e.setCancelled(true);
+        }
+    }
 
-            Location loc = plugin.getLagerManager().getNormalizedLocation(e.getClickedBlock());
-            plugin.getLagerManager().setTempLocation(p.getUniqueId(), loc);
+    @EventHandler
+    public void onClick(InventoryClickEvent e) {
+        if (!(e.getWhoClicked() instanceof Player p)) return;
+        String title = e.getView().getTitle();
+        
+        if (title.equals("Lager Verbindung")) {
+            e.setCancelled(true);
+            ItemStack clicked = e.getCurrentItem();
+            if (clicked == null || clicked.getType() == Material.AIR) return;
             
+            Location loc = plugin.getLagerManager().getTempLocation(p.getUniqueId());
+            if (loc == null) return;
+
+            if (e.getSlot() == 11) { // Ausgang
+                plugin.getLagerManager().createNode(p.getUniqueId(), loc, LagerNode.Type.AUSGANG);
+                p.sendMessage(ChatColor.GREEN + "Ausgang erstellt!");
+                p.closeInventory();
+            } else if (e.getSlot() == 15) { // Eingang
+                plugin.getLagerManager().createNode(p.getUniqueId(), loc, LagerNode.Type.EINGANG);
+                p.sendMessage(ChatColor.GREEN + "Eingang erstellt!");
+                p.closeInventory();
+                // Filter öffnen
+                new BukkitRunnable() {
+                    @Override
+                    public void run() {
+                        LagerNode node = plugin.getLagerManager().getNodes().get(loc);
+                        if(node != null) openFilterGUI(p, node, 0);
+                    }
+                }.runTaskLater(plugin, 1L);
+            }
+            return;
+        }
+
+        if (title.startsWith("Filter:")) {
+            e.setCancelled(true);
+            ItemStack clicked = e.getCurrentItem();
+            if (clicked == null || clicked.getType() == Material.AIR) return;
+
+            Location loc = plugin.getLagerManager().getTempLocation(p.getUniqueId());
+            if (loc == null) return;
             LagerNode node = plugin.getLagerManager().getNodes().get(loc);
-            if (node == null) {
-                openSetupGUI(p);
-            } else {
-                openSettingsGUI(p, node);
+            if (node == null) return;
+
+            int slot = e.getRawSlot();
+            int currentPage = this.playerPage.getOrDefault(p.getUniqueId(), 0);
+
+            // Vor/Zurück Buttons (Slots 45 und 53)
+            if (slot == 45) { // Zurück
+                int newPage = Math.max(0, currentPage - 1);
+                this.playerPage.put(p.getUniqueId(), newPage);
+                openFilterGUI(p, node, newPage);
+                return;
+            }
+            if (slot == 53) { // Weiter
+                int newPage = currentPage + 1;
+                this.playerPage.put(p.getUniqueId(), newPage);
+                openFilterGUI(p, node, newPage);
+                return;
+            }
+
+            // Modus Wechsel (Slot 49)
+            if (slot == 49) {
+                node.setWhitelist(!node.isWhitelist());
+                plugin.getLagerManager().save();
+                openFilterGUI(p, node, currentPage); // Refresh
+                return;
+            }
+
+            // Item Klick (Material Toggle)
+            if (slot < 45 && clicked.getType() != Material.AIR) {
+                Material mat = clicked.getType();
+                
+                if (node.getFilterMaterials().contains(mat)) {
+                    node.getFilterMaterials().remove(mat);
+                    p.playSound(p.getLocation(), org.bukkit.Sound.BLOCK_NOTE_BLOCK_BASS, 1, 1);
+                } else {
+                    node.getFilterMaterials().add(mat);
+                    p.playSound(p.getLocation(), org.bukkit.Sound.BLOCK_NOTE_BLOCK_PLING, 1, 1);
+                }
+                
+                plugin.getLagerManager().save();
+                openFilterGUI(p, node, currentPage); // Refresh mit gleicher Seite
             }
         }
     }
 
-    // --- GUIs ---
-
-    private void openSetupGUI(Player p) {
-        Inventory inv = Bukkit.createInventory(null, 27, "§eNeue Verbindung");
-
-        ItemStack ausgang = new ItemStack(Material.ORANGE_CANDLE);
-        ausgang.editMeta(m -> {
-            m.setDisplayName("§6Ausgang (Quelle)");
-            m.setLore(List.of("§7Items gehen von hier weg"));
-        });
-        inv.setItem(11, ausgang);
-
-        ItemStack eingang = new ItemStack(Material.GREEN_CANDLE);
-        eingang.editMeta(m -> {
-            m.setDisplayName("§aEingang (Ziel)");
-            m.setLore(List.of("§7Items kommen hier an", "§cFilter ist erforderlich"));
-        });
-        inv.setItem(15, eingang);
-
-        p.openInventory(inv);
-    }
-
-    private void openSettingsGUI(Player p, LagerNode node) {
-        Inventory inv = Bukkit.createInventory(null, 27, "§eEinstellungen");
-
-        ItemStack filterBtn = new ItemStack(Material.HOPPER);
-        filterBtn.editMeta(m -> m.setDisplayName("§bFilter bearbeiten"));
-        inv.setItem(11, filterBtn);
-
-        Material typeMat = node.getType() == LagerNode.Type.AUSGANG ? Material.ORANGE_CANDLE : Material.GREEN_CANDLE;
-        String nextType = node.getType() == LagerNode.Type.AUSGANG ? "Eingang" : "Ausgang";
-        ItemStack switchBtn = new ItemStack(typeMat);
-        switchBtn.editMeta(m -> m.setDisplayName("§eWechseln zu: " + nextType));
-        inv.setItem(13, switchBtn);
-
-        ItemStack deleteBtn = new ItemStack(Material.BARRIER);
-        deleteBtn.editMeta(m -> m.setDisplayName("§cVerbindung entfernen"));
-        inv.setItem(15, deleteBtn);
-        
-        p.openInventory(inv);
-    }
-
-    // --- FILTER GUI (Klick-basiert) ---
-    
     private void openFilterGUI(Player p, LagerNode node, int page) {
-        Inventory inv = Bukkit.createInventory(null, 54, "§bFilter: " + (node.isWhitelist() ? "§aWhitelist" : "§cBlacklist"));
+        String mode = node.isWhitelist() ? "§aWhitelist" : "§cBlacklist";
+        org.bukkit.inventory.Inventory inv = Bukkit.createInventory(null, 54, "Filter: " + mode);
 
-        // Material Liste erstellen (sortiert)
-        List<Material> materials = Arrays.stream(Material.values())
-                .filter(m -> !m.isAir() && m.isItem())
-                .sorted((m1, m2) -> m1.name().compareTo(m2.name()))
-                .collect(Collectors.toList());
+        // Material Liste erstellen
+        java.util.List<Material> materials = new java.util.ArrayList<>();
+        for (Material m : Material.values()) {
+            if (!m.isAir() && m.isItem()) materials.add(m);
+        }
+        materials.sort((m1, m2) -> m1.name().compareTo(m2.name()));
 
         int itemsPerPage = 45;
         int startIndex = page * itemsPerPage;
@@ -117,9 +138,8 @@ public class LagerListener implements Listener {
         for (int i = startIndex; i < endIndex; i++) {
             Material mat = materials.get(i);
             ItemStack displayItem = new ItemStack(mat);
-            ItemMeta meta = displayItem.getItemMeta();
+            org.bukkit.inventory.meta.ItemMeta meta = displayItem.getItemMeta();
             
-            // Wenn im Filter, Glow Effekt (via Enchant)
             if (node.getFilterMaterials().contains(mat)) {
                 meta.addEnchant(org.bukkit.enchantments.Enchantment.LURE, 1, true);
                 meta.addItemFlags(org.bukkit.inventory.ItemFlag.HIDE_ENCHANTS);
@@ -139,12 +159,12 @@ public class LagerListener implements Listener {
             inv.setItem(45, back);
         }
 
-        ItemStack mode = new ItemStack(node.isWhitelist() ? Material.WHITE_DYE : Material.RED_DYE);
-        mode.editMeta(m -> {
+        ItemStack modeItem = new ItemStack(node.isWhitelist() ? Material.WHITE_DYE : Material.RED_DYE);
+        modeItem.editMeta(m -> {
             m.setDisplayName(node.isWhitelist() ? "§aWhitelist" : "§cBlacklist");
-            m.setLore(List.of("§7Klicke zum Wechseln."));
+            m.setLore(Arrays.asList("§7Klicke zum Wechseln."));
         });
-        inv.setItem(49, mode);
+        inv.setItem(49, modeItem);
 
         if (endIndex < materials.size()) {
             ItemStack next = new ItemStack(Material.ARROW);
@@ -154,117 +174,4 @@ public class LagerListener implements Listener {
         
         p.openInventory(inv);
     }
-
-    // --- CLICK HANDLING ---
-
-    @EventHandler
-    public void onDrag(org.bukkit.event.inventory.InventoryDragEvent e) {
-        String title = e.getView().getTitle();
-        if (title.contains("§e") || title.contains("§b")) {
-            e.setCancelled(true);
-        }
-    }
-
-    @EventHandler
-    public void onClick(InventoryClickEvent e) {
-        if (!(e.getWhoClicked() instanceof Player p)) return;
-        String title = e.getView().getTitle();
-
-        // Immer canceln in unseren GUIs
-        if (title.contains("§e") || title.contains("§b")) {
-            e.setCancelled(true);
-        } else {
-            return;
-        }
-
-        ItemStack clicked = e.getCurrentItem();
-        if (clicked == null || clicked.getType() == Material.AIR) return;
-
-        Location loc = plugin.getLagerManager().getTempLocation(p.getUniqueId());
-        if (loc == null) return;
-
-        // SETUP GUI
-        if (title.equals("§eNeue Verbindung")) {
-            if (e.getSlot() == 11) {
-                plugin.getLagerManager().createNode(p.getUniqueId(), loc, LagerNode.Type.AUSGANG);
-                p.sendMessage("§aAusgang erstellt!");
-                p.closeInventory();
-            } else if (e.getSlot() == 15) {
-                plugin.getLagerManager().createNode(p.getUniqueId(), loc, LagerNode.Type.EINGANG);
-                p.sendMessage("§aEingang erstellt! Filter öffnet sich...");
-                LagerNode node = plugin.getLagerManager().getNodes().get(loc);
-                if(node != null) openFilterGUI(p, node, 0);
-            }
-        }
-        // SETTINGS GUI
-        else if (title.equals("§eEinstellungen")) {
-            LagerNode node = plugin.getLagerManager().getNodes().get(loc);
-            if (node == null) return;
-
-            if (e.getSlot() == 11) {
-                openFilterGUI(p, node, 0);
-            } else if (e.getSlot() == 13) {
-                plugin.getLagerManager().switchType(node);
-                p.sendMessage("§eTyp geändert!");
-                openSettingsGUI(p, node);
-            } else if (e.getSlot() == 15) {
-                plugin.getLagerManager().removeNode(loc);
-                p.sendMessage("§cEntfernt.");
-                p.closeInventory();
-            }
-        }
-        // FILTER GUI
-        else if (title.startsWith("§bFilter:")) {
-            LagerNode node = plugin.getLagerManager().getNodes().get(loc);
-            if (node == null) return;
-
-            int slot = e.getRawSlot();
-
-            // Navigation
-            if (slot == 45) { // Zurück
-                // Wir merken uns die Seite nicht pro Spieler, aber wir schätzen die Seite anhand des Inhalts... 
-                // Einfacher Fix: Seite 0 öffnen oder Logik erweitern.
-                openFilterGUI(p, node, 0); 
-                return;
-            }
-            if (slot == 53) { // Weiter
-                // Simpel: Wir machen Seite +1 (in einer echten App müsste man wissen welche Seite man ist)
-                // Hier vereinfacht: Wir schätzen die Seite anhand des ersten Items... 
-                // Besser: Wir speichern Seite im Item? Nein.
-                // Wir nehmen an, man blättert vorwärts.
-                // Da wir den Page-State nicht speichern, geht "Zurück" aktuell immer auf Seite 0.
-                // Für jetzt: Page State einfach simulieren oder ignorieren.
-                // Bessere Lösung: Page im Lore des Items speichern? Nein.
-                // Wir akzeptieren für jetzt, dass man nur vorwärts kann oder Seite 0.
-                // Schneller Fix: Wir zählen die Seiten anhand der Klicks? Nein.
-                // Ich lasse es so: Pfeile funktionieren basic.
-                return;
-            }
-
-            // Modus Wechsel
-            if (slot == 49) {
-                node.setWhitelist(!node.isWhitelist());
-                plugin.getLagerManager().save();
-                openFilterGUI(p, node, 0);
-                return;
-            }
-
-            // Item Klick (Material Toggle)
-            if (slot < 45 && clicked.getType() != Material.AIR) {
-                Material mat = clicked.getType();
-                
-                if (node.getFilterMaterials().contains(mat)) {
-                    node.getFilterMaterials().remove(mat);
-                    p.playSound(p.getLocation(), Sound.BLOCK_NOTE_BLOCK_BASS, 1, 1);
-                } else {
-                    node.getFilterMaterials().add(mat);
-                    p.playSound(p.getLocation(), Sound.BLOCK_NOTE_BLOCK_PLING, 1, 1);
-                }
-                
-                plugin.getLagerManager().save();
-                // GUI aktualisieren
-                openFilterGUI(p, node, 0); // Reset auf Seite 0 nach Klick, um Glow zu aktualisieren
-            }
-        }
-    }
-}
+                      }
